<resources>
    <string name="app_name">Inventory Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inventory Management</string>
    <string name="nav_header_subtitle">Dev: suryadhole29feb@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inventory">Inventories</string>
    <string name="menu_products">Products</string>
    <string name="menu_consumers">Consumers</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
