<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inventories"
            android:icon="@drawable/ic_inventory_black_24dp"
            android:title="@string/menu_inventory"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product_black_24dp"
            android:title="@string/menu_products"/>
        <item
            android:id="@+id/nav_consumers"
            android:title="@string/menu_consumers"
            android:icon="@drawable/ic_consumer_black_24dp"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout_black_24dp"/>

    </group>


</menu>
